MSIE fixes - errant "Loading" message. Horizontal scrollbar in IE7 DocLib
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@14519 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/themes/default/ie7.css
+++ b/root/projects/slingshot/source/web/themes/default/ie7.css
@@ -104,6 +104,11 @@ textarea
    background-position: left center;
 }
 
+.doclist .align-right
+{
+   margin-right: -1px;
+}
+
 .doclist .documents .detail
 {
    width: 100%;
